[package]
name = "redisesh"
authors = ["Jackson G. Kaindume <seestem@merely.tech>"]
version = "0.1.0"
edition = "2018"
license = "MIT"
keywords = ["sessions", "redis"]
homepage = "https://github.com/cy6erlion/redisesh"
repository = "https://github.com/cy6erlion/redisesh"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.2"
sodiumoxide = "0.2.7"